# mechanics

./: .gitignore  CMakeLists.txt  CMakePresets.json  example.json  example.py  main.cpp  vcpkg.json
.github/workflows/: make.yml
